--- a/code/backend1/package.json
+++ b/code/backend1/package.json
@@ -39,7 +39,8 @@
     "express": "^5.1.0",
     "knex": "^3.1.0",
     "knex-stringcase": "^1.4.6",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "winston": "^3.17.0"
   },
   "engines": {
     "node": ">=18.0.0"
